--- a/html/home.html
+++ b/html/home.html
@@ -847,7 +847,7 @@
             </ul>
           </div>
         </section>
-        <section class="dis-no vis-700 mob"></section>
+        <section class="dis-no vis-900 mob"></section>
         <section class="section05" id="section05">
           <div class="page">
             <div class="txt img-ani bottom-top">
@@ -865,17 +865,19 @@
                     LANDMARK</div>
                   <span class="desc">격조 높은 공간엔 언제나 대림바스가 있습니다.</span>
                 </div>
-                <a href="" target="" class="btn-view">
+                <div class="btn-box">
+                  <a href="" target="" class="btn-view dis-700">
                   <span class="btn-effect"></span>
                   <span class="btn-inner">
                     <span class="btn-title">랜드마크 더보기
                     </span>
                 </span>
-                </a>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
-          <div class="contents-wrap">
+          <div class="contents-wrap dis-900">
             <div class="cont-txt">
               <div class="line_wrap img-ani bottom-top">
                 <ul>
@@ -924,6 +926,81 @@
             <img src="../images/main/5-3.jpg" alt="" class="land_img">
             <img src="../images/main/5-4.jpg" alt="" class="land_img">
           </div>
+          <div class="m_section05 dis-no vis-900">
+            <div class="page">
+              <div class="swiper-container">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <ul class="landmark-slide">
+                      <li>
+                        <a href="">
+                          <span class="land_logo">
+                            <img src="../images/main/theshilla_seoul_logo.png" alt=""></span>
+                          <span class="line_bar"></span>
+                          <div class="main_tit"></div>
+                          <div class="desc"></div>
+                        </a>
+                        <img src="../images/main/m5-1.jpg" alt="" srcset="">
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="swiper-slide">
+                    <ul class="landmark-slide">
+                      <li>
+                        <a href="">
+                          <span class="land_logo">
+                            <img src="../images/main/fourseason_hotel_logo.png" alt=""></span>
+                          <span class="line_bar"></span>
+                          <div class="main_tit"></div>
+                          <div class="desc"></div>
+                        </a>
+                        <img src="../images/main/m5-2.jpg" alt="" srcset="">
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="swiper-slide">
+                    <ul class="landmark-slide">
+                      <li>
+                        <a href="">
+                          <span class="land_logo">
+                            <img src="../images/main/hotel_logo08.png" alt=""></span>
+                          <span class="line_bar"></span>
+                          <div class="main_tit"></div>
+                          <div class="desc"></div>
+                        </a>
+                        <img src="../images/main/m5-3.jpg" alt="" srcset="">
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="swiper-slide">
+                    <ul class="landmark-slide">
+                      <li>
+                        <a href="">
+                          <span class="land_logo">
+                            <img src="../images/main/the_plaza_logo.png" alt=""></span>
+                          <span class="line_bar"></span>
+                          <div class="main_tit"></div>
+                          <div class="desc"></div>
+                        </a>
+                        <img src="../images/main/m5-4.jpg" alt="" srcset="">
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="swiper-pagination"></div>
+                <span class="swiper-notification"></span>
+              </div>
+            </div>
+            <div class="btn-box">
+              <a href="" class="btn-view">
+                <span class="btn-effect"></span>
+                <span class="btn-inner">
+                  <span class="btn-title">랜드마크 더보기
+                  </span>
+              </span>
+              </a>
+            </div>
+          </div>
         </section>
         <section class="section06" id="section06">
           <div class="txt_cont img-ani bottom-top">
@@ -939,13 +1016,14 @@
           </div>
           <div class="page">
             <div class="slidebx img-ani bottom-top">
-              <ul class="magzine_list">
+              <ul class="media_list">
                 <li class="mag_li01 on">
                   <img src="../images/main/6-1.png" class="mag_img" alt="">
                   <div>
                     <span class="sub_tit">MEDIA</span>
                     <span class="main_tit">둘이 아닌 하나</span>
-                    <div class="playbx">
+                    <div class="playbx dis-no vis-700">
+                      play
                       <a href=""></a>
                     </div>
                   </div>
@@ -955,7 +1033,8 @@
                   <div>
                     <span class="sub_tit">MEDIA</span>
                     <span class="main_tit">욕실의 변화</span>
-                    <div class="playbx">
+                    <div class="playbx dis-no vis-700">
+                      play
                       <a href=""></a>
                     </div>
                   </div>
@@ -965,7 +1044,8 @@
                   <div>
                     <span class="sub_tit">MEDIA</span>
                     <span class="main_tit">가장 아름다운 방</span>
-                    <div class="playbx">
+                    <div class="playbx dis-no vis-700">
+                      play
                       <a href=""></a>
                     </div>
                   </div>
@@ -980,7 +1060,7 @@
         <footer id="footer">
           <div class="f-top">
             <div class="page">
-              <div class="f-main">
+              <div class="f-main dis-700">
                 <div class="sns">
                   <ul>
                     <li>
@@ -1019,10 +1099,10 @@
                     <img src="../images/main/f_logo.png" alt="">
                   </a>
                   <div class="menu_li">
-                    <ul>
+                    <ul class="menu_info">
                       <li>서울시 영등포구 버드나루로 84 제일빌딩</li>
                     </ul>
-                    <ul>
+                    <ul class="menu_call">
                       <li>대림바스 1588-1952 / 대림 바스&키친 1588-4360 / 대림케어: 1588-3667</li>
                       <li>상담시간 : AM 09:00 - PM 05:00 (공휴일 휴무)</li>
                     </ul>
@@ -1042,12 +1122,72 @@
                 </div>
               </div>
             </div>
+            <div class="dis-no vis-700">
+              <div class="f-info">
+                <a href="" class="f_logo">
+                  <img src="../images/main/f_logo.png" alt="">
+                </a>
+                <div class="menu_li m_menu_li">
+                  <span class="address">
+                    대림바스 고객센터 1588-1952<br>
+                    대림 바스&amp;키친 1588-4360<br>
+                    대림케어: 1588-3667<br>
+                    서울시 영등포구 버드나루로 84 제일빌딩<br>
+                    상담시간 : AM 09:00 - PM 05:00 (공휴일 휴무) 
+                  </span>
+                </div>
+              </div>
+              <div class="sns">
+                <ul>
+                  <li>
+                    <a href="https://blog.naver.com/daelim_bath" target="_blank"> 
+                      <div>
+                        <img src="../images/main/sns_blog.png" alt="">
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.facebook.com/daelimbath.co" target="_blank">
+                      <div>
+                        <img src="../images/main/sns_f.png" alt="">
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.instagram.com/daelimbath/" target="_blank">
+                      <div>
+                        <img src="../images/main/sns_instar.png" alt="">
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.youtube.com/user/daelimbnco" target="_blank">
+                      <div>
+                        <img src="../images/main/sns_you.png" alt="">
+                      </div>
+                    </a>
+                  </li>
+
+                </ul>
+              </div>
+            </div>
             <div class="f-submenu menu_li">
               <ul>
                 <li><a href="">이용약관</a></li>
                 <li><a href="">개인정보처리방침</a></li>
                 <li><a href="">이메일무단수집거부</a></li>
               </ul>
+            </div>
+            <div class="family dis-no vis-700">
+              <div class="family_site">
+                <span>FAMILY SITE</span>
+                <div class="family_menu">
+                  <ul>
+                    <li><a href="">DAELIM MALL</a></li>
+                    <li><a href="">DAELIM CARE</a></li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
           <span class="f-bt">COPYRIGHT@ 2021 DAELIM B&Co, LIMITED ALL RIGHT RESERVED.</span>
