--- a/html/home.html
+++ b/html/home.html
@@ -280,6 +280,210 @@
             </div>
           </div>
         </div>
+        <div class="site-container">
+          <div class="close-btn">
+            <img src="../images/main/factory_close.png" alt="">
+          </div>
+          <div class="site-inner">
+            <div class="site-wrap">
+              <div class="txt-ban">DAELIM</div>
+              <div class="site-cont">
+                <div class="site-box">
+                  <div class="depth01">바스</div>
+                    <div class="site-area">
+                      <ul>
+                        <li>
+                          <div class="main_tit"><a href="">브랜드</a></div>
+                          <div class="sub_tit"><a href="">대림바스</a></div>
+                          <div class="sub_tit"><a href="">FÜLEN</a></div>
+                        </li>
+                      </ul>
+                      <ul>
+                        <li>
+                          <div class="main_tit"><a href="">기술력</a></div>
+                          <div class="sub_tit"><a href="">자동물내림 일체형 비데</a></div>
+                          <div class="sub_tit"><a href="">위생도기 기술력</a></div>
+                          <div class="sub_tit"><a href="">수전 기술력</a></div>
+                        </li>
+                      </ul>
+                      <ul>
+                        <li>
+                          <div class="main_tit"><a href="">랜드마크</a></div>
+                        </li>
+                      </ul>
+                    </div>
+                </div>
+                <div class="site-box">
+                  <div class="depth01">리모델링</div>
+                    <div class="site-area">
+                      <ul>
+                        <li>
+                          <div class="main_tit"><a href="">대림바스&키친</a></div>
+                        </li>
+                      </ul>
+                      <ul>
+                        <li>
+                          <div class="main_tit"><a href="">리모델링</a></div>
+                          <div class="sub_tit"><a href="">욕실 리모델링</a></div>
+                          <div class="sub_tit"><a href="">주방 리모델링</a></div>
+                        </li>
+                      </ul>
+                    </div>
+                </div>
+                <div class="site-box">
+                  <div class="depth01">바스</div>
+                    <div class="site-area">
+                      <ul>
+                        <li>
+                          <div class="main_tit"><a href="">브랜드</a></div>
+                          <div class="sub_tit"><a href="">대림바스</a></div>
+                          <div class="sub_tit"><a href="">FÜLEN</a></div>
+                        </li>
+                      </ul>
+                      <ul>
+                        <li>
+                          <div class="main_tit"><a href="">기술력</a></div>
+                          <div class="sub_tit"><a href="">자동물내림 일체형 비데</a></div>
+                          <div class="sub_tit"><a href="">위생도기 기술력</a></div>
+                          <div class="sub_tit"><a href="">수전 기술력</a></div>
+                        </li>
+                      </ul>
+                      <ul>
+                        <li>
+                          <div class="main_tit"><a href="">랜드마크</a></div>
+                        </li>
+                      </ul>
+                    </div>
+                </div>
+                <div class="site-box">
+                  <div class="depth01">바스</div>
+                    <div class="site-area">
+                      <ul>
+                        <li>
+                          <div class="main_tit"><a href="">브랜드</a></div>
+                          <div class="sub_tit"><a href="">대림바스</a></div>
+                          <div class="sub_tit"><a href="">FÜLEN</a></div>
+                        </li>
+                      </ul>
+                      <ul>
+                        <li>
+                          <div class="main_tit"><a href="">기술력</a></div>
+                          <div class="sub_tit"><a href="">자동물내림 일체형 비데</a></div>
+                          <div class="sub_tit"><a href="">위생도기 기술력</a></div>
+                          <div class="sub_tit"><a href="">수전 기술력</a></div>
+                        </li>
+                      </ul>
+                      <ul>
+                        <li>
+                          <div class="main_tit"><a href="">랜드마크</a></div>
+                        </li>
+                      </ul>
+                    </div>
+                </div>
+                <div class="site-box">
+                  <div class="depth01">바스</div>
+                    <div class="site-area">
+                      <ul>
+                        <li>
+                          <div class="main_tit"><a href="">브랜드</a></div>
+                          <div class="sub_tit"><a href="">대림바스</a></div>
+                          <div class="sub_tit"><a href="">FÜLEN</a></div>
+                        </li>
+                      </ul>
+                      <ul>
+                        <li>
+                          <div class="main_tit"><a href="">기술력</a></div>
+                          <div class="sub_tit"><a href="">자동물내림 일체형 비데</a></div>
+                          <div class="sub_tit"><a href="">위생도기 기술력</a></div>
+                          <div class="sub_tit"><a href="">수전 기술력</a></div>
+                        </li>
+                      </ul>
+                      <ul>
+                        <li>
+                          <div class="main_tit"><a href="">랜드마크</a></div>
+                        </li>
+                      </ul>
+                    </div>
+                </div>
+                <div class="site-box">
+                  <div class="depth01">바스</div>
+                    <div class="site-area">
+                      <ul>
+                        <li>
+                          <div class="main_tit"><a href="">브랜드</a></div>
+                          <div class="sub_tit"><a href="">대림바스</a></div>
+                          <div class="sub_tit"><a href="">FÜLEN</a></div>
+                        </li>
+                      </ul>
+                      <ul>
+                        <li>
+                          <div class="main_tit"><a href="">기술력</a></div>
+                          <div class="sub_tit"><a href="">자동물내림 일체형 비데</a></div>
+                          <div class="sub_tit"><a href="">위생도기 기술력</a></div>
+                          <div class="sub_tit"><a href="">수전 기술력</a></div>
+                        </li>
+                      </ul>
+                      <ul>
+                        <li>
+                          <div class="main_tit"><a href="">랜드마크</a></div>
+                        </li>
+                      </ul>
+                    </div>
+                </div>
+                <div class="site-box">
+                  <div class="depth01">바스</div>
+                    <div class="site-area">
+                      <ul>
+                        <li>
+                          <div class="main_tit"><a href="">브랜드</a></div>
+                          <div class="sub_tit"><a href="">대림바스</a></div>
+                          <div class="sub_tit"><a href="">FÜLEN</a></div>
+                        </li>
+                      </ul>
+                      <ul>
+                        <li>
+                          <div class="main_tit"><a href="">기술력</a></div>
+                          <div class="sub_tit"><a href="">자동물내림 일체형 비데</a></div>
+                          <div class="sub_tit"><a href="">위생도기 기술력</a></div>
+                          <div class="sub_tit"><a href="">수전 기술력</a></div>
+                        </li>
+                      </ul>
+                      <ul>
+                        <li>
+                          <div class="main_tit"><a href="">랜드마크</a></div>
+                        </li>
+                      </ul>
+                    </div>
+                </div>
+                <div class="site-box">
+                  <div class="depth01">바스</div>
+                    <div class="site-area">
+                      <ul>
+                        <li>
+                          <div class="main_tit"><a href="">브랜드</a></div>
+                          <div class="sub_tit"><a href="">대림바스</a></div>
+                          <div class="sub_tit"><a href="">FÜLEN</a></div>
+                        </li>
+                      </ul>
+                      <ul>
+                        <li>
+                          <div class="main_tit"><a href="">기술력</a></div>
+                          <div class="sub_tit"><a href="">자동물내림 일체형 비데</a></div>
+                          <div class="sub_tit"><a href="">위생도기 기술력</a></div>
+                          <div class="sub_tit"><a href="">수전 기술력</a></div>
+                        </li>
+                      </ul>
+                      <ul>
+                        <li>
+                          <div class="main_tit"><a href="">랜드마크</a></div>
+                        </li>
+                      </ul>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </header>
       <div id="wrap" >
         <section class="section01" id="section01">
