--- a/html/introduce.html
+++ b/html/introduce.html
@@ -1,77 +1,158 @@
 <? include("../include/header.html"); ?>
-<div id="sub-contents-wrap">
-  <section id="sub-contents-title">
-    <div class="container">
-      <h2>재단 소개</h2>
-      <p>
-        LG복지재단은 정의사회 구현사업의 일환으로 LG의인상을 운영하고 있습니다. <br />
-        국가를 위해 헌신하는 공직자는 물론, 의로운 행동과 남다른 선행으로 <br />
-        사회정의 실현에 이바지한 시민들을 찾아내 포상합니다. <br />
-        사회의 귀감으로 널리 알려 더 나은 사회를 만들고자 2015년부터 운영해오고 있습니다.
-      </p>
-      <? include("../include/sns.html"); ?>
-    </div>
-  </section>
-  <div id="sub-contents">
-    <div class="introduce container">
-      <div class="diagram">
-        <ul>
-          <li>
-            <div class="contents">
-              <h3>연암문화재단</h3>
-              <ul class="list">
-                <li>LG아트센터</li>
-                <li>LG디스커버리랩</li>
-                <li>LG상남도서관</li>
-              </ul>
+<div id="wrap" class="header_top">
+  <div class="brand introduce product">
+    <div class="section01">
+      <div class="gap">
+        <div class="interact_txt img-ani bottom-up">BRAND</div>
+        <div class="sub_page">
+          <div class="txt_wrap">
+            <div class="tit_txt">
+              <span class="daelim_icon"><img src="../images/main/daelim_ico.png" alt="icon" /></span>
+              <span class="d_idx">Brand</span>
             </div>
-          </li>
-          <li>
-            <div class="contents">
-              <h3>연암문화재단</h3>
-              <ul class="list">
-                <li>LG아트센터</li>
-                <li>LG디스커버리랩</li>
-                <li>LG상남도서관</li>
-              </ul>
+            <div class="main_txt">대림바스</div>
+            <div class="sub_txt">
+              당신이 누리는 평범한 습관이 세상의 동경이 되는<br class="dis-no vis-700" />
+              진정한 스페셜 라이프 프리미엄 욕실의 중심,<br />그 최정점에 대림바스가 있습니다.
             </div>
-          </li>
-          <li>
-            <div class="contents">
-              <h3>연암문화재단</h3>
-              <ul class="list">
-                <li>LG아트센터</li>
-                <li>LG디스커버리랩</li>
-                <li>LG상남도서관</li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <div class="contents">
-              <h3>연암문화재단</h3>
-              <ul class="list">
-                <li>LG아트센터</li>
-                <li>LG디스커버리랩</li>
-                <li>LG상남도서관</li>
-              </ul>
-            </div>
-          </li>
-        </ul>
+          </div>
+        </div>
       </div>
-      <div class="philosophy">
-        <p>
-          <strong
-            >1947년 ‘락희화학’이라는 이름으로 첫 발걸음을 내딛은 <br />
-            LG는 기업 설립 이래 변함없는 사회공헌 활동을 펼쳐왔습니다.</strong
-          >
-        </p>
-        <p>
-          LG그룹의 사업영역과 규모가 성장함에 따라 사회공헌 활동 역시 질과 폭이 확장되었습니다. <br />
-          현재 LG는 문화예술, 과학기술, 환경, 복지에 이르기까지 폭넓은 분야에서 심도 있는 공익활동을 전개하고 있습니다. <br />
-          ‘고객을 위한 가치 창조’와 ‘인간 존중의 경영’이라는 LG 고유의 기업 경영철학이 단단하게 뿌리내렸기에 가능했습니다.
-        </p>
+    </div>
+    <div class="section02">
+      <div class="sub_page">
+        <div class="txt_wrap img-ani bottom-top">
+          <div class="brand_tit">휴식을 위한 바스 - 대림바스</div>
+          <div class="brand_txt">
+            씻어내고 비워내는 기능에 충실했던 욕실이 <br class="dis-no vis-600" />휴식과 사유의 공간으로 변모하고 있습니다.<br />
+            쉬고 치유하며 재충전하는 공감각적 테라피의 공간,<br />
+            품격을 중시하는 주택과 레지던스, 전 세계 최고급 호텔의 욕실이 <br class="dis-no vis-600" />대림바스로 채워지고 있는 이유입니다. <br />
+            프리미엄 위생도기 제조 57년 대한민국 욕실문화를 바꿔온 저력으로<br />
+            전통을 넘어 세계를 향해 K-욕실 브랜드 대림이 나아가고 있습니다.
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section03">
+      <div class="sub_page">
+        <div class="txt_box img-ani bottom-top img-aniload">
+          <p class="since">Since 1966</p>
+          <p class="since_txt">고상<span class="since_ch">高尙</span> 하고 근본<span class="since_ch">根本</span>있는 대림의 본바탕</p>
+        </div>
+        <div class="cont_box img-ani bottom-top">
+          <div class="cont_img">
+            <img src="../images/brand/about_bg02.png" alt="" />
+          </div>
+          <div class="cont_txt">
+            <ul>
+              <li>
+                <span class="txt_ch">高</span>
+                <div class="txt_meaning">
+                  <div class="txt_ko">높을 고</div>
+                  <p class="text">더 높은 세상을 <br class="dis-no vis-700" />향한 발걸음</p>
+                </div>
+              </li>
+              <li>
+                <span class="txt_ch">古</span>
+                <div class="txt_meaning">
+                  <div class="txt_ko">옛 고</div>
+                  <p class="text">켜켜이 쌓인 <br class="dis-no vis-700" />대림만의 경험</p>
+                </div>
+              </li>
+              <li>
+                <span class="txt_ch">故</span>
+                <div class="txt_meaning">
+                  <div class="txt_ko">연고 고</div>
+                  <p class="text">단단한 기반, <br class="dis-no vis-700" />이유있는 자부심</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section04 img-ani bottom-top">
+      <div class="sub_page">
+        <div class="sec04_cont">
+          <img src="../images/brand/about_img.png" alt="" />
+          <div class="sec04_txt img-ani bottom-top">
+            최고, 최대, 최초의 역사와 기술.<br />
+            이제 욕실을 넘어 물과 손이 닿는 모든 곳에 <br />
+            대림바스가 함께 합니다.
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section02 section05">
+      <div class="sub_page">
+        <div class="txt_wrap img-ani bottom-top">
+          <p class="since">NO.1 IN RELIABILITY</p>
+          <div class="global_tit">
+            세계 시장의 욕실 브랜드 리더<br />
+            대한민국을 대표로 전 세계로 나아가고 있습니다.
+          </div>
+          <div class="global_txt">
+            대림바스는 유럽 유수의 브랜드와 프리미엄 <br class="dis-no vis-700" />벽걸이형 자동물내림 일체형비데를 공동 개발하여<br />유럽 전역에 수출하고 있으며, <br class="dis-no vis-700" />국내
+            프리미엄 레지던스 공간에 적용되어<br />
+            글로벌 제품을 더욱 특별하게 선보이고 있습니다.
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section02 section06">
+      <div class="sub_page">
+        <div class="txt_wrap">
+          <div class="contents_box img-ani bottom-top">
+            <div class="global_box">
+              <p class="since">Global Daelimbath</p>
+              <p class="global_tit">“MADE-in KOREA DAELIM BATH”</p>
+              <p class="global_txt">
+                대림바스는 국내 최대 규모의 <br class="dis-no vis-700" />생산 능력을 가진 기업으로 국내 자체 생산하며,<br />
+                전국망에 갖춰진 A/S 네트워크를 통해 <br class="dis-no vis-700" />업계 최고의 신속한 사후 처리를 약속합니다.
+              </p>
+              <div class="as_cont">
+                <ul>
+                  <li>
+                    <img src="../images/brand/about_sec06_01.png" alt="" />
+                    <span>업계 최고 A/S망 <br />통합 서비스센터 운영</span>
+                  </li>
+                  <li>
+                    <img src="../images/brand/about_sec06_02.png" alt="" />
+                    <span>동종 업계 대비 최다 AS 인력 보유 <br />신속한 서비스 처리 지원</span>
+                  </li>
+                  <li>
+                    <img src="../images/brand/about_sec06_03.png" alt="" />
+                    <span>국내 최다 A/S망 보유 <br />(A/S직영점 47개)</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="global_box_r">
+              <img class="dis-700" src="../images/brand/about_sec06_04.png" alt="" />
+              <img class="dis-no vis-700" src="../images/brand/about_sec06_04_mo.png" alt="" style="width: 275.5px" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section07">
+      <div class="sub_page">
+        <div class="txt_wrap img-ani bottom-top">
+          <div class="txt_tit">
+            대림바스는 오늘도 미래를 생각하는<br />
+            첨단 기술과 창의적인 디자인으로 끊임없이<br />
+            新 욕실 문화를 창조합니다.
+          </div>
+        </div>
+        <div class="bath_img">
+          <img class="bath01 img-ani bottom-top tran01" src="../images/brand/bath_img01.png" alt="" />
+          <img class="img_ab bath02 img-ani bottom-top tran02" src="../images/brand/bath_img02.png" alt="" />
+          <img class="img_ab bath03 img-ani bottom-top tran03" src="../images/brand/bath_img03.png" alt="" />
+          <img class="img_ab bath04 img-ani bottom-top tran04" src="../images/brand/bath_img04.png" alt="" />
+          <img class="img_ab bath05 img-ani bottom-top tran05" src="../images/brand/bath_img05.png" alt="" />
+        </div>
       </div>
     </div>
   </div>
+  <? include("../include/footer.html"); ?>
 </div>
-<? include("../include/footer.html"); ?>
