--- a/html/brand.html
+++ b/html/brand.html
@@ -1,19 +1,21 @@
 <? include("../include/header.html"); ?>
 <div id="wrap" class="header_top">
-  <div class="brand introduce product">
-    <div class="section01">
-      <div class="gap">
-        <div class="interact_txt img-ani bottom-up">BRAND</div>
-        <div class="sub_page">
-          <div class="txt_wrap">
-            <div class="tit_txt">
-              <span class="daelim_icon"><img src="../images/main/daelim_ico.png" alt="icon" /></span>
-              <span class="d_idx">Brand</span>
-            </div>
-            <div class="main_txt">대림바스</div>
-            <div class="sub_txt">
-              당신이 누리는 평범한 습관이 세상의 동경이 되는<br class="dis-no vis-700" />
-              진정한 스페셜 라이프 프리미엄 욕실의 중심,<br />그 최정점에 대림바스가 있습니다.
+  <div class="brand introduce company">
+    <div class="product">
+      <div class="section01">
+        <div class="gap">
+          <div class="interact_txt img-ani bottom-up">BRAND</div>
+          <div class="sub_page">
+            <div class="txt_wrap">
+              <div class="tit_txt">
+                <span class="daelim_icon"><img src="../images/main/daelim_ico.png" alt="icon" /></span>
+                <span class="d_idx">Brand</span>
+              </div>
+              <div class="main_txt">대림바스</div>
+              <div class="sub_txt">
+                당신이 누리는 평범한 습관이 세상의 동경이 되는<br class="dis-no vis-700" />
+                진정한 스페셜 라이프 프리미엄 욕실의 중심, 그 최정점에 대림바스가 있습니다.
+              </div>
             </div>
           </div>
         </div>
@@ -24,9 +26,9 @@
         <div class="txt_wrap img-ani bottom-top">
           <div class="brand_tit">휴식을 위한 바스 - 대림바스</div>
           <div class="brand_txt">
-            씻어내고 비워내는 기능에 충실했던 욕실이 <br class="dis-no vis-600" />휴식과 사유의 공간으로 변모하고 있습니다.<br />
+            씻어내고 비워내는 기능에 충실했던 욕실이 <br class="dis-no vis-700" />휴식과 사유의 공간으로 변모하고 있습니다.<br />
             쉬고 치유하며 재충전하는 공감각적 테라피의 공간,<br />
-            품격을 중시하는 주택과 레지던스, 전 세계 최고급 호텔의 욕실이 <br class="dis-no vis-600" />대림바스로 채워지고 있는 이유입니다. <br />
+            품격을 중시하는 주택과 레지던스, 전 세계 최고급 호텔의 욕실이 <br class="dis-no vis-700" />대림바스로 채워지고 있는 이유입니다. <br />
             프리미엄 위생도기 제조 57년 대한민국 욕실문화를 바꿔온 저력으로<br />
             전통을 넘어 세계를 향해 K-욕실 브랜드 대림이 나아가고 있습니다.
           </div>
@@ -35,7 +37,7 @@
     </div>
     <div class="section03">
       <div class="sub_page">
-        <div class="txt_box img-ani bottom-top img-aniload">
+        <div class="txt_box img-ani bottom-top">
           <p class="since">Since 1966</p>
           <p class="since_txt">고상<span class="since_ch">高尙</span> 하고 근본<span class="since_ch">根本</span>있는 대림의 본바탕</p>
         </div>
@@ -89,7 +91,7 @@
           <p class="since">NO.1 IN RELIABILITY</p>
           <div class="global_tit">
             세계 시장의 욕실 브랜드 리더<br />
-            대한민국을 대표로 전 세계로 나아가고 있습니다.
+            대한민국을 대표로 전 세계로 <br class="dis-no vis-700" />나아가고 있습니다.
           </div>
           <div class="global_txt">
             대림바스는 유럽 유수의 브랜드와 프리미엄 <br class="dis-no vis-700" />벽걸이형 자동물내림 일체형비데를 공동 개발하여<br />유럽 전역에 수출하고 있으며, <br class="dis-no vis-700" />국내
@@ -118,7 +120,7 @@
                   </li>
                   <li>
                     <img src="../images/brand/about_sec06_02.png" alt="" />
-                    <span>동종 업계 대비 최다 AS 인력 보유 <br />신속한 서비스 처리 지원</span>
+                    <span>동종 업계 대비 <br class="dis-no vis-700" />최다 AS 인력 보유 <br />신속한 서비스 처리 지원</span>
                   </li>
                   <li>
                     <img src="../images/brand/about_sec06_03.png" alt="" />
@@ -128,14 +130,14 @@
               </div>
             </div>
             <div class="global_box_r">
-              <img class="dis-700" src="../images/brand/about_sec06_04.png" alt="" />
-              <img class="dis-no vis-700" src="../images/brand/about_sec06_04_mo.png" alt="" style="width: 275.5px" />
+              <img class="dis-900" src="../images/brand/about_sec06_04.png" alt="" />
+              <img class="dis-no vis-900" src="../images/brand/about_sec06_04_mo.png" alt="" style="width: 275.5px" />
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="section07">
+    <div class="section07 dis-700">
       <div class="sub_page">
         <div class="txt_wrap img-ani bottom-top">
           <div class="txt_tit">
@@ -150,6 +152,30 @@
           <img class="img_ab bath03 img-ani bottom-top tran03" src="../images/brand/bath_img03.png" alt="" />
           <img class="img_ab bath04 img-ani bottom-top tran04" src="../images/brand/bath_img04.png" alt="" />
           <img class="img_ab bath05 img-ani bottom-top tran05" src="../images/brand/bath_img05.png" alt="" />
+        </div>
+      </div>
+    </div>
+    <div class="introduce m_section07 dis-no vis-700">
+      <div class="inner_page">
+        <div class="bath_img">
+          <img class="m_bath01 img-ani bottom-top" src="../images/brand/about_mo_img01.png" alt="" />
+          <img class="img_ab m_bath02 img-ani bottom-top" src="../images/brand/about_mo_img02.png" alt="" />
+        </div>
+        <div class="txt_wrap">
+          <div class="tit_txt">
+            <span class="daelim_icon"><img src="../images/brand/daelim_ico_w.png" alt="icon" /></span>
+            <span class="d_idx">Daelim Bath</span>
+          </div>
+          <div class="txt_tit">
+            대림바스는 오늘도<br />
+            미래를 생각하는 첨단 기술과<br />
+            창의적인 디자인으로<br />
+            끊임없이 新욕실 문화를 창조합니다.
+          </div>
+        </div>
+        <div class="bath_img bot">
+          <img class="m_bath03 img-ani bottom-top" src="../images/brand/about_mo_img03.png" alt="" />
+          <img class="m_bath04 img-ani bottom-top" src="../images/brand/about_mo_img04.png" alt="" />
         </div>
       </div>
     </div>
